Renamed MainActivity to PlayingGameActivity

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,7 +8,7 @@
     android:id="@+id/board"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:text="Hello World, MainActivity"
+    android:text="Hello World, PlayingGameActivity"
     />
 </LinearLayout>
 
