--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -14,5 +14,11 @@
     android:id="@+id/graphical_board"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"/>
+<Button
+    android:id="@+id/new_game_button"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:text="New game"
+    />
 </LinearLayout>
 
